# runo

./: Dockerfile  LICENSE  README.md  dev  dev.toml  pyproject.toml  rcmd  rego  rego.toml  runo  runo.toml
.github/workflows/: ci.yml
containers/python310/: Dockerfile  pyproject.toml
containers/python311/: Dockerfile  pyproject.toml
containers/python312/: Dockerfile  pyproject.toml
containers/python313/: Dockerfile  pyproject.toml
containers/python36/: Dockerfile  pip.in
containers/python37/: Dockerfile  pyproject.toml
containers/python38/: Dockerfile  pyproject.toml
containers/python39/: Dockerfile  pyproject.toml
docs/: CONFIG.md  QUICK_START.md
rcmd_cfg/: pip_requirements.txt
scripts/: pre_commit.sh  test.sh  update_deps.sh
tests/e2e/: rego  run.py
tests/e2e/dev/: client.py
tests/e2e/project/: client.py
tests/e2e/project_example/: dev.toml  docker-compose.yml  rego  rego.toml
tests/e2e/project_example/dev/: Dockerfile  client.py
tests/e2e/project_example/project/: say.sh
tests/unit/: conftest.py  test_rego.py  test_runo.py  test_toml_parser.py
