[project]
name = "rego"
version = "0.0.1"
description = "Tool for managing repository"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pip>=25.0.1",  # In this container we want to test import "pip._vendor.tomli as tomllib"
]

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "ruff",
    "toml",
    "types-toml",
]
